/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/testing/services/dummy/dsubscriber/pb/gen";
 
 package ukama.dummy.dsubscriber.v1;
 
 service DsubscriberService {
    rpc Update(UpdateRequest) returns (UpdateResponse);
 }
 
message UpdateRequest {
    Dsubscriber dsubscriber = 1;
}

message UpdateResponse {
    Dsubscriber dsubscriber = 1;
}

message Dsubscriber {
    string iccid = 1;
    string profile = 2;
    string scenario = 3;
}